# ddream

./: readme.md
server/: Makefile  ddream-dev.opam  ddream-dev.opam.locked  ddream.opam  ddream.opam.locked  dune-project  readme.md
server/lib/: db.ml  dune  graphql.ml  middlewares.ml  signature.ml
server/test/: dune  graphql.ml  signature.ml
ui/: .gitignore  .merlin  bsconfig.json  package.json  readme.md  tailwind.config.js
ui/src/: App.res  Index.res  Services.res  State.res
ui/src/components/: Button.res  Spinner.res
ui/src/pages/: Create.res  Home.res  P404.res  User.res  Users.res
ui/src/styles/: Styles.res
ui/src/web3/: Ethers.res  Wallet.res  wallet.js
